# thermal_camera

./: CMakeLists.txt  README.md
ROS2_sub_pub/: package.xml  setup.py
ROS2_sub_pub/bag_recorder_nodes/: CMakeLists.txt  package.xml
ROS2_sub_pub/bag_recorder_nodes/src/: simple_bag_recorder.cpp
ROS2_sub_pub/thermal_camera/: package.xml  setup.cfg  setup.py
ROS2_sub_pub/thermal_camera/launch/: camera_launch.py
ROS2_sub_pub/thermal_camera/thermal_camera/: camera_sub_pub.py
scripts/: evo_thermal.py
